// Copyright Â© 2023, SAS Institute Inc., Cary, NC, USA.  All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

// Environment controller is the service that starts a python process to run gym environments
service EnvControl {
  rpc Start(Empty) returns (ServerInfo) {};
  rpc Close(ServerInfo) returns (Empty) {};
}

message ServerInfo{
  string ip = 1;
  int32 port = 2;
}

// Env service is responsible for RL environments
service Env {
  rpc Handshake(Empty) returns (MetaData) {};
  rpc Make (Name) returns (Info) {};
  rpc Reset (Empty) returns (Transition) {};
  rpc Step (Action) returns (Transition) {};
  rpc Render (RenderMode) returns (RenderOut) {};
  rpc Seed (EnvSeed) returns (Empty) {};
  rpc Sample (Empty) returns (Action) {};
  rpc Close (Empty) returns (Empty) {};
}

message MetaData {
  string EnvVersion = 1;
}

message Name {
  string data = 1;
  repeated string wrapper = 2;
  string render_mode = 3;
}

message Info {
  repeated Space observation_space = 1;
  repeated Space action_space = 2;
  int32 max_episode_steps = 3;
}

// This object is used for passing the step info to server
message StepInfoKV {
   map<string, string> s_map = 1;
   map<string, int32> i_map = 2;
   map<string, float> f_map = 3;
   map<string, bool> b_map = 4;
}

message StepInfoKVInt {
  string key = 1;
  int32 value = 2;
}

message StepInfoKVString {
  string key = 1;
  string value = 2;
}

message StepInfoKVFloat {
  string key = 1;
  float value = 2;
}

message StepInfoKVBool {
  string key = 1;
  bool value = 2;
}

message StepInfo {
  repeated StepInfoKVInt data_int = 1;
  repeated StepInfoKVString data_str = 2;
  repeated StepInfoKVFloat data_float = 3;
  repeated StepInfoKVBool data_bool = 4;
}

message Space {
  string type = 1;
  repeated int32 shape = 2;
  string dtype = 3;
  string key = 4;
  repeated float low_f = 5;
  repeated float high_f = 6;
  repeated int32 low_i = 7;
  repeated int32 high_i = 8;
  int32 n = 9;
}

message Empty {
}

message Observation {
  repeated float data_f = 1;
  repeated int32 data_i = 2;
  repeated int32 shape = 3;
}

message Action {
  repeated int32 data_f = 1;
  repeated int32 data_i = 2;
  repeated int32 shape = 3;
}

message Transition {
  Observation next_observation = 1;
  float reward = 2;
  bool done = 3;
  StepInfo info=4;
}

message RenderMode{
    string data = 1;
}

message RenderOut {
    repeated int32 rgb = 1;
    string ansi = 2;
}

message EnvSeed{
    int32 data = 1;
}
